--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,9 @@
 $brown: #724e2b;
-$white:  rgb(236, 237, 238);
+$popup: #866545;
+$white: rgb(236, 237, 238);
 $cocoa: #BFA182;
 $skin: #e9c19c;
-$creamy:#ffcc80; 
+$creamy: #ffcc80;
 $special-cream: #f1bd52;
+$border-color: #bfa182;
+$error: rgb(245, 119, 119);
