--- a/scss/main.scss
+++ b/scss/main.scss
@@ -612,7 +612,7 @@ a {
     border-radius: 5rem;
     cursor: pointer;
     transition: 0.1s;
-  
+
     .counter-container {
       width: 3.5rem;
       height: 3.5rem;
@@ -626,7 +626,7 @@ a {
       border: 1px solid $white;
       border-radius: 50%;
     }
-  
+
     .counter {
       text-transform: lowercase;
       font-weight: normal;
@@ -635,7 +635,7 @@ a {
 
     }
   }
-  
+
   .shopping-cart:hover {
     border: 1px solid $white;
     background-color: $creamy;
@@ -644,6 +644,9 @@ a {
 
   .modal {
     position: fixed;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
     top: 0;
     top: -600px;
     left: 50%;
@@ -653,18 +656,118 @@ a {
     border: 1px solid black;
     z-index: 1;
     transition: top 0.8s;
+
+    transform: translateX(-50%);
+    background-color: $popup2;
+    color: white;
   }
 
   .show-modal {
     top: 150px;
   }
 
-  .modal-item {
-    transform: translateX(-50%);
-    background-color: green;
-    color: white;
+  .close-btn-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
   }
-  
+
+  .close-btn {
+    position: relative;
+    right: 0;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: none;
+    font-weight: bold;
+    font-size: 1.8rem;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .close-btn:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  .el-name {
+    font-weight: bold;
+    font-size: 3.5rem;
+    color: #ddd;
+  }
+
+  .line {
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // padding-left: 100px;
+    width: 100%;
+    border-top: 1px solid rgb(236, 237, 238);
+    margin: 22px 0px 0px;
+    padding: 22px 0px 0px;
+  }
+
+  .modal-pizza {}
+
+  .category-name {
+    padding: 1rem 0;
+    // margin: 1rem 0;
+    font-size: 2.2rem;
+    font-weight: bold;
+  }
+
+  .inputs {
+    display: flex;
+    margin: 2rem 0;
+
+    input {
+      margin: 0 1rem;
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+    }
+
+    input:first-of-type {
+      margin-left: 0;
+    }
+  }
+
+  .last {
+    margin-bottom: 10rem;
+  }
+
+  .add-item-btn-container {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .btn {
+    min-width: 17.7rem;
+    min-height: 5rem;
+    max-height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border: 1px solid black;
+    background-color: $brown;
+    color: $white;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 1rem;
+    font-size: 1.4rem;
+    transition: color 0.1s, background-color 0.1s;
+    cursor: pointer;
+  }
+
+  .btn:hover {
+    color: #724e2b;
+    background-color: #ddd;
+  }
+
+  .modal-sauce {}
+
+  .modal-drinks {}
+
   // .modal-general {
   //   transform: translateX(-50%);
   //   background-color: red;
