--- a/css/main.css
+++ b/css/main.css
@@ -578,10 +578,10 @@ a {
   top: -600px;
   left: 50%;
   width: 500px;
-  height: 600px;
+  height: auto;
   background-color: white;
   border: 1px solid black;
-  z-index: 1;
+  z-index: 101;
   transition: top 0.8s;
   transform: translateX(-50%);
   background-color: #836445;
@@ -606,6 +606,12 @@ a {
   font-size: 1.8rem;
   cursor: pointer;
   transition: 0.3s;
+}
+.menu .products-list .product-name {
+  margin: 1rem 0;
+  font-weight: bold;
+  font-size: 2.5rem;
+  color: #ddd;
 }
 .menu .close-btn:hover {
   background-color: rgba(0, 0, 0, 0.1);
@@ -632,15 +638,15 @@ a {
 }
 .menu .inputs input {
   margin: 0 1rem;
-  width: 18px;
-  height: 18px;
+  width: 1.8rem;
+  height: 1.8rem;
   cursor: pointer;
 }
 .menu .inputs input:first-of-type {
   margin-left: 0;
 }
 .menu .last {
-  margin-bottom: 10rem;
+  margin-bottom: 2rem;
 }
 .menu .add-item-btn-container {
   display: flex;
@@ -667,6 +673,16 @@ a {
 .menu .btn:hover {
   color: #724e2b;
   background-color: #ddd;
+}
+.menu .modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 100;
 }
 .menu__heading {
   display: flex;
@@ -765,6 +781,9 @@ a {
 .menu .element__btn:hover {
   color: #724e2b;
   background-color: #ddd;
+}
+.menu .drinks__prices {
+  flex-direction: column;
 }
 .menu .not-visible {
   display: none;
