--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,6 @@ body {
   font-size: 1.6rem;
   font-family: "Montserrat", sans-serif;
   background-color: $brown;
-  // overflow-x: hidden;
 }
 
 a {
@@ -234,7 +233,6 @@ a {
 .opinion {
   margin-top: 10rem;
   margin-bottom: 10rem;
-  // padding: 10rem;
   color: rgb(236, 237, 238);
   border: 1px solid white;
   background: rgba(0, 0, 0, 0.4);
@@ -500,7 +498,6 @@ a {
 .info {
   margin-top: 10rem;
   margin-bottom: 10rem;
-  // padding: 1.5rem 3rem;
   border: 0.5px solid white;
   color: white;
   background: rgba(0, 0, 0, 0.4);
@@ -509,7 +506,6 @@ a {
     padding: 0;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    // grid-template-rows: 1fr;
   }
 
   &__element {
@@ -642,159 +638,6 @@ a {
     color: $brown;
   }
 
-  .modal {
-    position: fixed;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    top: 0;
-    top: -600px;
-    left: 50%;
-    width: 500px;
-    height: auto;
-    background-color: white;
-    border: 1px solid black;
-    z-index: 101;
-    transition: top 0.8s;
-
-    transform: translateX(-50%);
-    background-color: $popup2;
-    color: white;
-  }
-
-  .show-modal {
-    top: 150px;
-  }
-
-  .close-btn-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-  }
-
-  .close-btn {
-    position: relative;
-    right: 0;
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    border: none;
-    font-weight: bold;
-    font-size: 1.8rem;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-
-  .products-list {
-    .product-name {
-      margin: 1rem 0;
-      font-weight: bold;
-      font-size: 2.5rem;
-      color: #ddd;
-    }
-  }
-
-  .close-btn:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-
-  .el-name {
-    font-weight: bold;
-    font-size: 3.5rem;
-    color: #ddd;
-  }
-
-  .line {
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // padding-left: 100px;
-    width: 100%;
-    border-top: 1px solid rgb(236, 237, 238);
-    margin: 22px 0px 0px;
-    padding: 22px 0px 0px;
-  }
-
-  .modal-pizza {}
-
-  .category-name {
-    padding: 1rem 0;
-    // margin: 1rem 0;
-    font-size: 2.2rem;
-    font-weight: bold;
-  }
-
-  .inputs {
-    display: flex;
-    margin: 2rem 0;
-
-    input {
-      margin: 0 1rem;
-      width: 1.8rem;
-      height: 1.8rem;
-      cursor: pointer;
-    }
-
-    input:first-of-type {
-      margin-left: 0;
-    }
-  }
-
-  .last {
-    margin-bottom: 2rem;
-  }
-
-  .add-item-btn-container {
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .btn {
-    min-width: 17.7rem;
-    min-height: 5rem;
-    max-height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem 1rem;
-    border: 1px solid black;
-    background-color: $brown;
-    color: $white;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-radius: 1rem;
-    font-size: 1.4rem;
-    transition: color 0.1s, background-color 0.1s;
-    cursor: pointer;
-  }
-
-  .btn:hover {
-    color: #724e2b;
-    background-color: #ddd;
-  }
-
-  .modal-sauce {}
-
-  .modal-drinks {}
-
-  // .modal-general {
-  //   transform: translateX(-50%);
-  //   background-color: red;
-  // }
-
-  .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    z-index: 100;
-  }
-
-
-
   &__heading {
     display: flex;
     justify-content: center;
@@ -872,8 +715,6 @@ a {
       }
     }
 
-
-
     &__prices {
       height: auto;
       display: flex;
@@ -917,13 +758,6 @@ a {
       flex-direction: column;
     }
   }
-
-  // .sauce {}
-
-  // .promotion {}
-
-  // .drinks {}
-
   .not-visible {
     display: none;
   }
@@ -1275,8 +1109,6 @@ a {
     }
   }
 
-
-
   &__btn {
     padding-top: 20px;
     width: 100%;
@@ -1284,13 +1116,10 @@ a {
     display: flex;
     justify-content: flex-end;
 
-
-
     &-inside {
       position: relative;
       width: 32rem;
       height: 4.4rem;
-      ;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -1327,7 +1156,7 @@ a {
 }
 
 input:placeholder-shown {
-  font-style: italic; // makes placeholder italics in input
+  font-style: italic;
   font-size: 1.6rem;
   padding-left: 1rem;
 }
@@ -1417,13 +1246,10 @@ input:placeholder-shown {
     cursor: pointer;
   }
 
-
   &__btn:hover {
     background-color: $white;
     color: $brown;
   }
-
-
 
   &__small {
     padding-top: 1rem;
